Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>LO KYO's ART</title>
-<link rel="icon" type="image/png" href=""/>
+<link rel="icon" type="image/png" href="./Logoslettering.png"/>
 <style>
   :root{
     --bg:#0b0f13; --card:#0f1720; --muted:#a7b0bb; --accent:#6ce;
