Replace SVG placeholder with image for artwork

--- a/index.html
+++ b/index.html
@@ -96,15 +96,7 @@
       <div style="font-size:13px;color:var(--muted)">Featured artwork</div>
       <!-- Replace the SVG below with your image by inserting <img src='path/to/your.jpg'/> -->
       <div style="border-radius:8px;overflow:hidden">
-        <svg viewBox="0 0 600 360" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder artwork">
-          <defs>
-            <linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#6ce"/><stop offset="1" stop-color="#4fc"/></linearGradient>
-          </defs>
-          <rect width="100%" height="100%" fill="#06101a"/>
-          <circle cx="420" cy="120" r="110" fill="url(#g)" opacity="0.12"/>
-          <rect x="38" y="48" width="330" height="260" rx="18" fill="#081420" stroke="#0d4863" stroke-opacity="0.12"/>
-          <text x="60" y="200" fill="#95a8b8" font-size="22" font-family="sans-serif">Replace with your artwork</text>
-        </svg>
+         <img src="./Ferrari499P#50NFT.jpeg" />
       </div>
       <div class="muted">Tip: replace inline SVG with an <code>&lt;img src=&quot;your-image.jpg&quot;&gt;</code> or a data URL for a single-file portfolio.</div>
     </div>
@@ -169,7 +161,7 @@
 (function(){
   // ---------- Utility: placeholders for gallery ----------
   const galleryData = [
-    {title: 'Untitled 01', desc:'oil on canvas', src: null},
+    {title: 'Ferrari 499P #50', desc:'digital painting', src: "./Ferrari499P#50NFT.jpeg"},
     {title: 'Untitled 02', desc:'digital collage', src: null},
     {title: 'Untitled 03', desc:'mixed media', src: null},
     {title: 'Untitled 04', desc:'ink studies', src: null},
