Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="muted">Email: <a href="mailto:l0ky0.0yk0l@gmail.com">l0ky0.0yk0l@gmail.com</a> — <a href="https://www.instagram.com/leonardo.p1sco/">Instagram</a> / X / Linktree</div>
   </section>
 
-  <footer>Built as a single-file static portfolio • Edit images/audio inside the HTML</footer>
+  <footer>See you soon</footer>
 </div>
 
 <!-- Script (single-file logic) -->
