Fix image source filename in index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div style="font-size:13px;color:var(--muted)">Featured artwork</div>
       <!-- Replace the SVG below with your image by inserting <img src='path/to/your.jpg'/> -->
       <div style="border-radius:8px;overflow:hidden">
-         <img src="./Ferrari499P#50NFT.jpeg"/>
+         <img src="./Ferrari499P_50NFT.jpeg"/>
       </div>
       <div class="muted">Tip: replace inline SVG with an <code>&lt;img src=&quot;your-image.jpg&quot;&gt;</code> or a data URL for a single-file portfolio.</div>
     </div>
@@ -161,7 +161,7 @@
 (function(){
   // ---------- Utility: placeholders for gallery ----------
   const galleryData = [
-    {title: 'Ferrari 499P #50', desc:'digital painting', src: "./Ferrari499P#50NFT.jpeg"},
+    {title: 'Ferrari 499P #50', desc:'digital painting', src: "./Ferrari499P_50NFT.jpeg"},
     {title: 'Untitled 02', desc:'digital collage', src: null},
     {title: 'Untitled 03', desc:'mixed media', src: null},
     {title: 'Untitled 04', desc:'ink studies', src: null},
