Update image description and caption in index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div style="border-radius:8px;overflow:hidden">
          <img src="./Ferrari499P_50NFT.jpeg" style="width:300px; height:300px"/>
       </div>
-      <div class="muted">Tip: replace inline SVG with an <code>&lt;img src=&quot;your-image.jpg&quot;&gt;</code> or a data URL for a single-file portfolio.</div>
+      <div class="muted">Latest Digital Painting</div>
     </div>
   </section>
 
@@ -161,7 +161,7 @@
 (function(){
   // ---------- Utility: placeholders for gallery ----------
   const galleryData = [
-    {title: 'Ferrari 499P #50', desc:'digital painting', src: "./Ferrari499P_50NFT.jpeg"},
+    {title: 'Ferrari 499P #50', desc:'Digital Painting', src: "./Ferrari499P_50NFT.jpeg"},
     {title: 'Untitled 02', desc:'digital collage', src: null},
     {title: 'Untitled 03', desc:'mixed media', src: null},
     {title: 'Untitled 04', desc:'ink studies', src: null},
