Refactor CSS styles for improved readability

--- a/index.html
+++ b/index.html
@@ -6,22 +6,48 @@
 <title>LO KYO's ART</title>
 <link rel="icon" type="image/png" href="./Logoslettering.png"/>
 <style>
-  :root{
-    --bg:#0b0f13; --card:#0f1720; --muted:#a7b0bb; --accent:#6ce;
+  :root {
+    --bg:#0b0f13;
+    --card:#0f1720;
+    --muted:#a7b0bb;
+    --accent:#6ce;
     --glass: rgba(255,255,255,0.03);
-  }
-  html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;color:#e8f0ff;background:
-    linear-gradient(180deg,#050609 0%, #081018 100%); -webkit-font-smoothing:antialiased}
-  .wrap{max-width:1200px;margin:28px auto;padding:20px;display:grid;grid-template-columns:1fr;gap:20px}
-  header{display:flex;gap:18px;align-items:center;justify-content:space-between}
+}
+  html,body {height:100%;
+             margin:0;
+             font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+             color:#e8f0ff;
+             background:linear-gradient(180deg,#050609 0%, #081018 100%);
+             -webkit-font-smoothing:antialiased
+}
+  .wrap{max-width:1200px;
+        margin:28px auto;
+        padding:20px;
+        display:grid;
+        grid-template-columns:1fr;
+        gap:20px
+}
+  header{display:flex;
+         gap:18px;
+         align-items:center;
+         justify-content:space-between
+}
   .brand{display:flex;gap:14px;align-items:center}
   .logo{
-    width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#3b8);
-    display:inline-grid;place-items:center;font-weight:700;color:#022;padding:8px;
-    box-shadow:0 6px 20px rgba(30,50,70,.5)
+    width:56px;
+    height:56px;
+    border-radius:10px;
+    background:linear-gradient(135deg,var(--accent),#3b8);
+    display:inline-grid;
+    place-items:center;
+    font-weight:700;
+    color:#022;padding:8px;
+    box-shadow:0 6px 20px rgba(30,50,70,.5);
   }
-  h1{font-size:20px;margin:0}
-  nav a{color:var(--muted);text-decoration:none;margin-left:14px;font-size:14px}
+  h1{font-size:20px;
+     margin:0}
+  nav a{color:var(--muted);
+        text-decoration:none;margin-left:14px;font-size:14px}
   nav a:hover{color:var(--accent)}
   .hero{background:var(--card);border-radius:12px;padding:18px;display:grid;grid-template-columns:1fr 360px;gap:18px;align-items:center;box-shadow:0 12px 40px rgba(2,8,20,.6)}
   .hero .intro h2{margin:0 0 6px 0;font-size:22px}
